# utils-rs

./: Cargo.toml  README.md  rustfmt.toml
src/: check.rs  fs.rs  lib.rs  main.rs  open.rs
tests/: check.rs
