[package]
name = "rsu"
version = "0.1.1"
edition = "2021"
description = "Rust utility library"
authors = ["lencx <cxin1314@gmail.com>"]
homepage = "https://github.com/lencx/utils-rs"
repository = "https://github.com/lencx/utils-rs"
keywords = ["rust", "utils"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.55"
which = "4.2.4"
